@@ -1,0 +1,51 @@
+#!/usr/bin/env python
+#
+# Copyright (c) 2001, 2002, 2003, 2004 The SCons Foundation
+#
+# Permission is hereby granted, free of charge, to any person obtaining
+# a copy of this software and associated documentation files (the
+# "Software"), to deal in the Software without restriction, including
+# without limitation the rights to use, copy, modify, merge, publish,
+# distribute, sublicense, and/or sell copies of the Software, and to
+# permit persons to whom the Software is furnished to do so, subject to
+# the following conditions:
+#
+# The above copyright notice and this permission notice shall be included
+# in all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY
+# KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
+# WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+#
+
+__revision__ = "test/Configure.py 0.96.D308 2005/09/25 12:59:35 knight"
+
+"""
+Test that the configure context directory can be specified by
+setting the $CONFIGUREDIR construction variable.
+"""
+
+import TestSCons
+
+test = TestSCons.TestSCons()
+
+test.write("SConstruct", """\
+def CustomTest(context):
+  context.Message('Executing Custom Test ... ')
+  context.Result(1)
+
+env = Environment(CONFIGUREDIR = 'custom_config_dir')
+conf = Configure(env, custom_tests = {'CustomTest' : CustomTest})
+conf.CustomTest();
+env = conf.Finish()
+""")
+
+test.run()
+
+test.must_exist('custom_config_dir')
+
+test.pass_test()
